--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-vercel": "^3.1.0",
 		"@sveltejs/kit": "^1.27.4",
 		"svelte": "^4.2.7",
 		"vite": "^4.4.2"
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-cloudflare": "^2.3.3"
+		"@vercel/kv": "^1.0.0",
+		"@vercel/postgres": "^0.5.1",
+		"vercel": "^32.6.1"
 	}
 }
